<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#85EDEE"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_himbauan_diri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="#DCE3E4"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/himbauan_diri" />

    <Button
        android:id="@+id/btn_cuci_tangan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="#DCE3E4"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/cuci_tangan" />

    <Button
        android:id="@+id/btn_pakai_masker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="#DCE3E4"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/pakai_masker" />

    <Button
        android:id="@+id/btn_pola_hidup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="#DCE3E4"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/pola_hidup" />

    <Button
        android:id="@+id/btn_data_diri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="#DCE3E4"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/nama" />

    <Button
        android:id="@+id/btn_contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="#DCE3E4"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/telepon" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="211dp"
        app:srcCompat="@drawable/sehat" />


</LinearLayout>